fix: fixed the issue with the spacing on the top of the page when no tab bar present

--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -778,9 +778,7 @@ div.navbar__logo{
   max-width: 894px;
   box-shadow: 0 .15rem .5rem #a1a1a12b, 0px -2rem var(--ifm-color-white),0px -1rem var(--ifm-color-white),0px -3rem var(--ifm-color-white),0px -4rem var(--ifm-color-white),0px -5rem var(--ifm-color-white) ;
 }
-.docItemCol_node_modules-\@docusaurus-theme-classic-lib-theme-DocItem-Layout-styles-module, .docItemCol_VOVn{
-  padding-top: calc(var(--ifm-tabs-height) + 1rem);
-}
+
 @media (max-width: 996px) {.tabs {
  width: calc(100% - ((var(--doc-sidebar-hidden-width)) + 4rem)) !important;
 }
